<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">宿舍管理</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
     <!-- "关于我们"下的文本 -->
    <string name="tel">服务热线:0000-0000-0000</string>
    <string name="more_aboutus_appname">基于Android的大同大学学生宿舍管理App</string>
    <string name="more_aboutus_version">版本：1.1</string>
        <string name="copyright">Copyright © 2007–2014</string>
    <string name="web">   www.wishbottle.com</string>
    <string name="app_copyright">基于Android的大同大学学生宿舍管理App, All Rights Reserved</string>
    
    <string name="main_index_home_text">首页</string>
    <string name="main_index_type_text">课程信息</string>
    <string name="main_index_mystore_text">个人管理</string>
    <string name="main_index_cart_text">我的预定</string>
    
    <!-- new tab host -->
     <string name="new_main_index_home_text">首页</string>
    <string name="new_main_index_search_text">搜索</string>
    <string name="new_main_index_cart_text">购物车</string>
    <string name="new_main_index_mine_text">我的</string>
    
    
    <string name="_">羽绒服</string>
    <string name="goods_tab_view_new_text">新品</string>
    <string name="goods_tab_view_price_text">价格</string>
    <string name="goods_tab_view_num_text">销量</string>
    <string name="goods_tab_view_man_text">人气</string>
    
    <string name="mystore_order_text">我的订单</string>
    <string name="myorder">主界面</string>
    <string name="mygoodssearch">我的预定</string>
    <string name="mycart">成绩分析图表</string>
     <string name="mystore_vouchers_text">我的抵用卷</string>
      <string name="mystore_collection_text">留言</string>
       <string name="mystore_address_text">地址管理</string>
        <string name="mystore_history_text">浏览历史</string>
        <string name="mystore_pic_huancan_text">清除图片缓存</string>
        <string name="mystore_huancun_text">清除浏览历史</string>
        <string name="mystore_about_text">个人信息修改</string>
        <string name="mystore_help_text">在线帮助</string>
        <string name="mystore_ic_charge_text">IC卡充值</string>
        <string name="reading">数据读取中,请稍候...</string>
        <string name="download_nosdcard">下载失败,请正确插入您的SD卡！</string>
        <string name="setup_ready">下载完成,准备安装！</string>
	    <string name="download_retry">下载失败,请稍后重试！</string>
	    <string name="download_finish">下载完成,是否现在安装？</string>
	    <string name="setup_ask">文件已保存至存储卡cangshengwangsystemapk目录下,是否现在安装</string>
</resources>