<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#F5F5F5"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#D9434E"
        android:orientation="horizontal"
        android:padding="5dip" >
 		<ImageView
            android:id="@+id/imageBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/icon_back_default"
            android:gravity="center_vertical" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="5dip"
            android:text="关于我们"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50.0dip"
            android:contentDescription="TODO"
            android:src="@drawable/ic_launcher_dingcan" />
        <TextView
            android:id="@+id/txt_appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80.0dip"
            android:text="@string/more_aboutus_appname"
            android:textColor="#6D6D6D"
            android:textSize="17.0sp" />
        <TextView
            android:id="@+id/txt_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_appname"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15.0dip"
            android:text="@string/more_aboutus_version"
            android:textColor="#6D6D6D"
            android:textSize="15.0sp" />
       <Button
           android:id="@+id/btu_feekback"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_margin="40.0dip"
           android:background="@drawable/add_to_car_button_normal"
           android:text="意见反馈"
           android:textColor="#FFFFFF"
           android:textSize="15dp"
           android:padding="10dip"
           android:visibility="gone"
           android:layout_below="@id/txt_version" />
        <TextView
            android:id="@+id/txt_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15.0dip"
            android:text="@string/app_copyright"
            android:textColor="#6D6D6D"
            android:textSize="10.0sp" />
    </RelativeLayout>
</LinearLayout>